@@ -5,6 +5,7 @@
 - API Change: Net#openURI now returns a boolean to indicate whether the uri was actually opened.
 - API Change: DefaultShader now always combines material and environment attributes
 - API Change: Added Texture constructor which takes an existing GL texture handle.
+- API Change: Added ShapeRenderer constructor to pass a custom shader program to ImmediateModeRenderer20.
 
 [1.5.4]
 - Added support for image layers in Tiled maps (TiledMapImageLayer)
